--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -30,4 +30,55 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+a {
+  color: #41aaa8;
+}
+
+.header {
+  height: 500px;
+  width: 100%;
+  background-color: #2c003e;
+  color: hsl(240deg, 100%, 96%);
+  position: relative;
+}
+
+.header-content {
+  padding-top: 30px;
+  padding-left: 120px;
+  padding-right: 120px;
+}
+
+.my-name {
+  font-size: 60px;
+  padding-bottom: 0px;
+  margin-bottom: 3px;
+}
+
+.occupation {
+  font-size: 30px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  color: #41aaa8;
+}
+
+.profile-picture {
+  border-color: #41aaa8;
+  border-width: 5px;
+  border-style: solid;
+  border-radius: 10%;
+}
+
+.header-contact {
+  padding-left: 0px;
+  font-size: 20px;
+  color: #41aaa8 !important;
+  /* font-weight: 100; */
+  /* margin: 0px; */
+}
+
+.header-contact li {
+  display: inline;
+  margin-right: 130px;
 }
