--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ a {
 }
 
 .header {
-  height: 570px;
+  height: 580px;
   width: 100%;
   /* background-color: #2c003e; */
   background: linear-gradient(180deg, #2c003e, #297574);
@@ -122,10 +122,20 @@ a {
 ***********************************************************************
 ****************  Header Media **************************************** */
 
+@media (max-width: 1750px) and (min-width: 1476px) {
+
+  .page-description {
+    margin-top: 55px;
+    font-style: italic;
+    font-size: 25px;
+  }
+
+}
+
 @media (max-width: 1475px) and (min-width: 1250px) {
 
   .header {
-    height: 550px;
+    height: 580px;
     width: 100%;
     background: linear-gradient(180deg, #2c003e, #297574);
     color: hsl(240deg, 100%, 96%);
@@ -145,6 +155,12 @@ a {
     font-weight: bold;
   }
 
+  .page-description {
+    margin-top: 25px;
+    font-style: italic;
+    font-size: 25px;
+  }
+
 }
 
 @media (max-width: 1249px) and (min-width: 1000px) {
@@ -155,6 +171,26 @@ a {
     background: linear-gradient(180deg, #2c003e, #297574);
     color: hsl(240deg, 100%, 96%);
     position: relative;
+  }
+
+  .header-content {
+    padding-top: 20px;
+    padding-left: 90px;
+    padding-right: 90px;
+    position: relative;
+  }
+
+  .my-name {
+    font-size: 55px;
+    padding-bottom: 0px;
+    margin-bottom: 3px;
+  }
+
+  .occupation {
+    font-size: 28px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: hsl(175deg, 100%, 80%);
   }
 
   .header-contact {
@@ -206,11 +242,17 @@ a {
     display: none;
   }
 
+  .page-description {
+    margin-top: 5px;
+    font-style: italic;
+    font-size: 23px;
+  }
+
 }
 
 @media (max-width: 999px) and (min-width: 775px) {
 
-  .my-name {
+  /* .my-name {
     font-size: 50px;
     padding-bottom: 0px;
     margin-bottom: 3px;
@@ -221,14 +263,34 @@ a {
     margin-top: 0px;
     margin-bottom: 0px;
     color: hsl(175deg, 100%, 80%);
-  }
+  } */
 
   .header {
-    height: 610px;
+    height: 640px;
     width: 100%;
     background: linear-gradient(180deg, #2c003e, #297574);
     color: hsl(240deg, 100%, 96%);
     position: relative;
+  }
+
+  .header-content {
+    padding-top: 20px;
+    padding-left: 90px;
+    padding-right: 90px;
+    position: relative;
+  }
+
+  .my-name {
+    font-size: 50px;
+    padding-bottom: 0px;
+    margin-bottom: 3px;
+  }
+
+  .occupation {
+    font-size: 28px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: hsl(175deg, 100%, 80%);
   }
 
   .header-contact {
@@ -284,11 +346,17 @@ a {
     display: none;
   }
 
+  .page-description {
+    margin-top: 260px;
+    font-style: italic;
+    font-size: 20px;
+  }
+
 }
 
 @media (max-width: 774px) and (min-width: 690px) {
 
-  .my-name {
+  /* .my-name {
     font-size: 40px;
     padding-bottom: 0px;
     margin-bottom: 3px;
@@ -299,7 +367,7 @@ a {
     margin-top: 0px;
     margin-bottom: 0px;
     color: hsl(175deg, 100%, 80%);
-  }
+  } */
 
   .header {
     height: 600px;
@@ -307,6 +375,26 @@ a {
     background: linear-gradient(180deg, #2c003e, #297574);
     color: hsl(240deg, 100%, 96%);
     position: relative;
+  }
+  
+  .header-content {
+    padding-top: 15px;
+    padding-left: 80px;
+    padding-right: 80px;
+    position: relative;
+  }
+
+  .my-name {
+    font-size: 40px;
+    padding-bottom: 0px;
+    margin-bottom: 3px;
+  }
+
+  .occupation {
+    font-size: 28px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: hsl(175deg, 100%, 80%);
   }
 
   .header-contact {
@@ -362,11 +450,17 @@ a {
     display: none;
   }
 
+  .page-description {
+    margin-top: 240px;
+    font-style: italic;
+    font-size: 20px;
+  }
+
 }
 
 @media (max-width: 689px) and (min-width: 600px) {
 
-  .my-name {
+  /* .my-name {
     font-size: 30px;
     padding-bottom: 0px;
     margin-bottom: 3px;
@@ -377,7 +471,7 @@ a {
     margin-top: 0px;
     margin-bottom: 0px;
     color: hsl(175deg, 100%, 80%);
-  }
+  } */
 
   .header {
     height: 600px;
@@ -385,6 +479,26 @@ a {
     background: linear-gradient(180deg, #2c003e, #297574);
     color: hsl(240deg, 100%, 96%);
     position: relative;
+  }
+
+  .header-content {
+    padding-top: 15px;
+    padding-left: 80px;
+    padding-right: 80px;
+    position: relative;
+  }
+
+  .my-name {
+    font-size: 30px;
+    padding-bottom: 0px;
+    margin-bottom: 3px;
+  }
+
+  .occupation {
+    font-size: 22px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: hsl(175deg, 100%, 80%);
   }
 
   .header-contact {
@@ -438,6 +552,12 @@ a {
     float: left;
     margin-right: 30px;
     display: none;
+  }
+
+  .page-description {
+    margin-top: 240px;
+    font-style: italic;
+    font-size: 20px;
   }
 
 }
