--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,13 @@ a {
 
 @media (max-width: 1750px) and (min-width: 1476px) {
 
+  .header-content {
+    padding-top: 20px;
+    padding-left: 90px;
+    padding-right: 90px;
+    position: relative;
+  }
+
   .page-description {
     margin-top: 55px;
     font-style: italic;
@@ -135,10 +142,17 @@ a {
 @media (max-width: 1475px) and (min-width: 1250px) {
 
   .header {
-    height: 580px;
+    height: 620px;
     width: 100%;
     background: linear-gradient(180deg, #2c003e, #297574);
     color: hsl(240deg, 100%, 96%);
+    position: relative;
+  }
+
+  .header-content {
+    padding-top: 20px;
+    padding-left: 90px;
+    padding-right: 90px;
     position: relative;
   }
 
@@ -482,9 +496,9 @@ a {
   }
 
   .header-content {
-    padding-top: 15px;
-    padding-left: 80px;
-    padding-right: 80px;
+    padding-top: 10px;
+    padding-left: 70px;
+    padding-right: 70px;
     position: relative;
   }
 
@@ -503,7 +517,7 @@ a {
 
   .header-contact {
     padding-left: 0px;
-    font-size: 18px;
+    font-size: 17px;
     color: hsl(175deg, 100%, 80%);
   
   }
@@ -555,9 +569,9 @@ a {
   }
 
   .page-description {
-    margin-top: 240px;
+    margin-top: 260px;
     font-style: italic;
-    font-size: 20px;
+    font-size: 19px;
   }
 
 }
@@ -565,7 +579,7 @@ a {
 
 @media (max-width: 599px) and (min-width: 0px) {
 
-  .my-name {
+  /* .my-name {
     font-size: 27px;
     padding-bottom: 0px;
     margin-bottom: 3px;
@@ -576,14 +590,34 @@ a {
     margin-top: 0px;
     margin-bottom: 0px;
     color: hsl(175deg, 100%, 80%);
-  }
+  } */
 
   .header {
-    height: 630px;
+    height: 500px;
     width: 100%;
     background: linear-gradient(180deg, #2c003e, #297574);
     color: hsl(240deg, 100%, 96%);
     position: relative;
+  }
+
+  .header-content {
+    padding-top: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    position: relative;
+  }
+
+  .my-name {
+    font-size: 27px;
+    padding-bottom: 0px;
+    margin-bottom: 3px;
+  }
+
+  .occupation {
+    font-size: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: hsl(175deg, 100%, 80%);
   }
 
   .header-contact {
@@ -637,6 +671,12 @@ a {
     float: left;
     margin-right: 30px;
     display: none;
+  }
+
+  .page-description {
+    margin-top: 200px;
+    font-style: italic;
+    font-size: 15px;
   }
 
 }
