--- a/src/App.css
+++ b/src/App.css
@@ -694,24 +694,28 @@ a {
 .work-container {
   height: 100px;
   width: 100%;
-  background-color: hsl(175deg, 35%, 70%);
-  margin-top: -21px;
+  background-color: hsl(175deg, 55%, 80%);
+  /* margin-top: -20px; */
   position: relative;
 }
 
 .work-header {
   padding-left: 120px;
-  padding-top: 8px;
+  padding-top: 7px;
+  font-size: 20px;
+  color: hsl(100deg, 0%, 26%);
 }
 
 .job-container {
-  height: 100px;
+  height: 200px;
   width: 100%;
+  /* position: relative; */
+  padding-top: 0px;
+  /* margin-top: -20px; */
 }
 
 .job-even {
   background-color: #d2fafb;
-
 
 }
 
@@ -721,6 +725,19 @@ a {
 
 .job-content {
   padding-left: 120px;
+  padding-top: 1px;
+}
+
+.job-title {
+  margin-bottom: 0px;
+  color: hsl(100deg, 0%, 30%);
+
+}
+
+.job-company {
+  margin-top: 0px;
+  font-size: 20px;
+  font-weight: normal;
 }
 
 
