--- a/src/App.css
+++ b/src/App.css
@@ -691,6 +691,17 @@ a {
 ***********************************************************************
 ******************************************************************** */
 
+
+
+/* *******************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+******************** Work Body Begin *****************************8 */
+
 .work-container {
   height: 100px;
   width: 100%;
@@ -761,20 +772,293 @@ a {
 .job-description {
   font-size: 18px;
 }
-/* background-color: hsl(175deg, 45%, 80%); */
 
+/* *******************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+******************** Work Media Begin *****************************8 */
 
-/* .header {
-  height: 580px;
-  width: 100%;
-  background: linear-gradient(180deg, #2c003e, #297574);
-  color: hsl(240deg, 100%, 96%);
-  position: relative;
-} */
+@media (max-width:1750px) and (min-width: 1476px) {
+  .job-container {
+    height: 200px;
+    width: 100%;
+    padding-top: 0px;
+    /* margin-top: -20px; */
+  }
 
-/* .header-content {
-  padding-top: 30px;
-  padding-left: 120px;
-  padding-right: 120px;
-  position: relative;
-} */
+  .job-content {
+    padding-left: 90px;
+    /* padding-top: 1px; */
+    padding-right: 90px;
+  }
+
+  .job-title {
+    margin-bottom: 0px;
+    color: hsl(100deg, 0%, 35%);
+    font-size: 29px;
+  }
+  
+  .job-company {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 23px;
+    font-weight: normal;
+  }
+  
+  .job-sub-header {
+    margin-top: 0px;
+    height: 20px;
+    font-style: italic;
+    color: hsl(100deg, 0%, 30%);
+    font-size: 18px;
+  }
+  
+  .job-description {
+    font-size: 18px;
+  }
+  
+}
+
+@media (max-width:1475px) and (min-width: 1250px) {
+  .job-container {
+    height: 200px;
+    width: 100%;
+    padding-top: 0px;
+    /* margin-top: -20px; */
+  }
+
+  .job-content {
+    padding-left: 90px;
+    /* padding-top: 1px; */
+    padding-right: 90px;
+  }
+
+  .job-title {
+    margin-bottom: 0px;
+    color: hsl(100deg, 0%, 35%);
+    font-size: 29px;
+  }
+  
+  .job-company {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 23px;
+    font-weight: normal;
+  }
+  
+  .job-sub-header {
+    margin-top: 0px;
+    height: 20px;
+    font-style: italic;
+    color: hsl(100deg, 0%, 30%);
+    font-size: 18px;
+  }
+  
+  .job-description {
+    font-size: 18px;
+  }
+}
+
+@media (max-width:1249px) and (min-width: 1000px) {
+  .job-container {
+    height: 200px;
+    width: 100%;
+    padding-top: 0px;
+    /* margin-top: -20px; */
+  }
+  
+  .job-content {
+    padding-left: 90px;
+    /* padding-top: 1px; */
+    padding-right: 90px;
+  }
+
+  .job-title {
+    margin-bottom: 0px;
+    color: hsl(100deg, 0%, 35%);
+    font-size: 29px;
+  }
+  
+  .job-company {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 23px;
+    font-weight: normal;
+  }
+  
+  .job-sub-header {
+    margin-top: 0px;
+    height: 20px;
+    font-style: italic;
+    color: hsl(100deg, 0%, 30%);
+    font-size: 18px;
+  }
+  
+  .job-description {
+    font-size: 18px;
+  }
+}
+
+@media (max-width:999px) and (min-width: 775px) {
+  .job-container {
+    height: 200px;
+    width: 100%;
+    padding-top: 0px;
+    /* margin-top: -20px; */
+  }
+
+  .job-content {
+    padding-left: 90px;
+    /* padding-top: 1px; */
+    padding-right: 90px;
+  }
+
+  .job-title {
+    margin-bottom: 0px;
+    color: hsl(100deg, 0%, 35%);
+    font-size: 29px;
+  }
+  
+  .job-company {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 23px;
+    font-weight: normal;
+  }
+  
+  .job-sub-header {
+    margin-top: 0px;
+    height: 20px;
+    font-style: italic;
+    color: hsl(100deg, 0%, 30%);
+    font-size: 18px;
+  }
+  
+  .job-description {
+    font-size: 18px;
+  }
+}
+
+@media (max-width:774px) and (min-width: 690px) {
+  .job-container {
+    height: 200px;
+    width: 100%;
+    padding-top: 0px;
+    /* margin-top: -20px; */
+  }
+
+  .job-content {
+    padding-left: 80px;
+    /* padding-top: 1px; */
+    padding-right: 80px;
+  }
+
+  .job-title {
+    margin-bottom: 0px;
+    color: hsl(100deg, 0%, 35%);
+    font-size: 29px;
+  }
+  
+  .job-company {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 23px;
+    font-weight: normal;
+  }
+  
+  .job-sub-header {
+    margin-top: 0px;
+    height: 20px;
+    font-style: italic;
+    color: hsl(100deg, 0%, 30%);
+    font-size: 18px;
+  }
+  
+  .job-description {
+    font-size: 18px;
+  }
+}
+
+@media (max-width:689px) and (min-width: 600px) {
+  .job-container {
+    height: 200px;
+    width: 100%;
+    padding-top: 0px;
+    /* margin-top: -20px; */
+  }
+
+  .job-content {
+    padding-left: 70px;
+    /* padding-top: 1px; */
+    padding-right: 70px;
+  }
+
+  .job-title {
+    margin-bottom: 0px;
+    color: hsl(100deg, 0%, 35%);
+    font-size: 29px;
+  }
+  
+  .job-company {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 23px;
+    font-weight: normal;
+  }
+  
+  .job-sub-header {
+    margin-top: 0px;
+    height: 20px;
+    font-style: italic;
+    color: hsl(100deg, 0%, 30%);
+    font-size: 18px;
+  }
+  
+  .job-description {
+    font-size: 18px;
+  }
+}
+
+@media (max-width:599px) and (min-width: 0px) {
+  .job-container {
+    height: 200px;
+    width: 100%;
+    padding-top: 0px;
+    /* margin-top: -20px; */
+  }
+
+  .job-content {
+    padding-left: 30px;
+    /* padding-top: 1px; */
+    padding-right: 30px;
+  }
+
+  .job-title {
+    margin-bottom: 0px;
+    color: hsl(100deg, 0%, 35%);
+    font-size: 29px;
+  }
+  
+  .job-company {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 23px;
+    font-weight: normal;
+  }
+  
+  .job-sub-header {
+    margin-top: 0px;
+    height: 20px;
+    font-style: italic;
+    color: hsl(100deg, 0%, 30%);
+    font-size: 18px;
+  }
+  
+  .job-description {
+    font-size: 18px;
+  }
+}
