Added project header and beginning css

--- a/src/App.css
+++ b/src/App.css
@@ -700,6 +700,21 @@ a {
 **********************************************************************
 **********************************************************************
 **********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
 ******************** Work Body Begin *****************************8 */
 
 .work-container {
@@ -1161,4 +1176,97 @@ a {
   .job-description {
     font-size: 14px;
   }
+}
+
+/* ************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+*********************   Project Body Begin ************** ** */
+
+.project-header-container {
+  height: 100px;
+  width: 100%;
+  background-color: hsl(175deg, 55%, 80%);
+  position: relative;
+}
+
+.project-header {
+  padding-left: 120px;
+  padding-top: 7px;
+  font-size: 20px;
+  color: hsl(100deg, 0%, 26%);
+}
+
+
+
+
+/* ************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************************************************************
+***************  Project Media Begin ********************* */
+
+@media (max-width: 1750px) and (min-width: 1476px) {
+
+}
+
+@media (max-width: 1475px) and (min-width: 1250px) {
+
+}
+
+@media (max-width: 1249px) and (min-width: 1000px) {
+
+}
+
+@media (max-width: 999px) and (min-width: 775px) {
+
+}
+
+@media (max-width: 774px) and (min-width: 690px) {
+
+}
+
+@media (max-width: 689px) and (min-width: 600px) {
+
+}
+
+@media (max-width: 599px) and (min-width: 0px) {
+
 }
