--- a/src/App.css
+++ b/src/App.css
@@ -1244,29 +1244,113 @@ a {
 ***************  Project Media Begin ********************* */
 
 @media (max-width: 1750px) and (min-width: 1476px) {
-
+  .project-header-container {
+    height: 100px;
+    width: 100%;
+    background-color: hsl(175deg, 55%, 80%);
+    position: relative;
+  }
+  
+  .project-header {
+    padding-left: 90px;
+    padding-top: 7px;
+    font-size: 20px;
+    color: hsl(100deg, 0%, 26%);
+  }
 }
 
 @media (max-width: 1475px) and (min-width: 1250px) {
-
+  .project-header-container {
+    height: 100px;
+    width: 100%;
+    background-color: hsl(175deg, 55%, 80%);
+    position: relative;
+  }
+  
+  .project-header {
+    padding-left: 90px;
+    padding-top: 7px;
+    font-size: 18px;
+    color: hsl(100deg, 0%, 26%);
+  }
 }
 
 @media (max-width: 1249px) and (min-width: 1000px) {
-
+  .project-header-container {
+    height: 100px;
+    width: 100%;
+    background-color: hsl(175deg, 55%, 80%);
+    position: relative;
+  }
+  
+  .project-header {
+    padding-left: 90px;
+    padding-top: 7px;
+    font-size: 17px;
+    color: hsl(100deg, 0%, 26%);
+  }
 }
 
 @media (max-width: 999px) and (min-width: 775px) {
-
+  .project-header-container {
+    height: 100px;
+    width: 100%;
+    background-color: hsl(175deg, 55%, 80%);
+    position: relative;
+  }
+  
+  .project-header {
+    padding-left: 90px;
+    padding-top: 7px;
+    font-size: 16px;
+    color: hsl(100deg, 0%, 26%);
+  }
 }
 
 @media (max-width: 774px) and (min-width: 690px) {
-
+  .project-header-container {
+    height: 100px;
+    width: 100%;
+    background-color: hsl(175deg, 55%, 80%);
+    position: relative;
+  }
+  
+  .project-header {
+    padding-left: 80px;
+    padding-top: 7px;
+    font-size: 15px;
+    color: hsl(100deg, 0%, 26%);
+  }
 }
 
 @media (max-width: 689px) and (min-width: 600px) {
-
+  .project-header-container {
+    height: 90px;
+    width: 100%;
+    background-color: hsl(175deg, 55%, 80%);
+    position: relative;
+  }
+  
+  .project-header {
+    padding-left: 70px;
+    padding-top: 7px;
+    font-size: 14px;
+    color: hsl(100deg, 0%, 26%);
+  }
 }
 
 @media (max-width: 599px) and (min-width: 0px) {
-
+  .project-header-container {
+    height: 80px;
+    width: 100%;
+    background-color: hsl(175deg, 55%, 80%);
+    position: relative;
+  }
+  
+  .project-header {
+    padding-left: 30px;
+    padding-top: 7px;
+    font-size: 13px;
+    color: hsl(100deg, 0%, 26%);
+  }
 }
