Added section for project urls, including variable which controls for truthy website

--- a/src/App.css
+++ b/src/App.css
@@ -1211,7 +1211,9 @@ a {
   color: hsl(100deg, 0%, 26%);
 }
 
-
+.url-link {
+  color: hsl(220deg, 100%, 50%);
+}
 
 
 /* ************************************************************
