--- a/src/App.css
+++ b/src/App.css
@@ -1212,7 +1212,7 @@ a {
 }
 
 .project-container {
-  height: 300px;
+  height: 600px;
   width: 100%;
   padding-top: 0px;
   /* margin-top: -20px; */
@@ -1271,13 +1271,21 @@ a {
   display: block;
 } */
 
+.project-images-container {
+  height: 250px;
+  width: 100%;
+}
+
 .project-image {
-  border-color: #41aaa8;
-  border-width: 5px;
-  border-style: solid;
-  border-radius: 10%;
-  float: left;
-  margin-right: 30px;
+  /* width: auto;
+  height: auto; */
+  /* max-width: 400px;
+  max-height: 400px; */
+  margin-right: 50px;
+  padding-bottom: 50px;
+  /* float: left; */
+  max-width: 27%;
+  height: 100%;
 }
 
 .url-link {
